Supprime les points médians WIP

--- a/data/benefits/javascript/provence-alpes-cote-azur-fonds-sanitaire-social.yml
+++ b/data/benefits/javascript/provence-alpes-cote-azur-fonds-sanitaire-social.yml
@@ -7,8 +7,8 @@ description: Il s’agit d’une aide financière destinée à améliorer les co
   travail social en Région Provence-Alpes-Côte d'Azur.
 conditions:
   - Être stagiaire de la formation professionnelle inscrit ou inscrite en formation
-    sanitaire de niveau V (aide soignant·e, auxiliaire de puériculture,
-    ambulancier·e).
+    sanitaire de niveau V (aide-soignant ou aide-soignante, auxiliaire de puériculture,
+    ambulancier ou ambulancière).
   - Être bénéficiaire de la bourse régionale d’études sanitaires et sociales.
 conditions_generales:
   - type: regions
