--- a/data/benefits/javascript/region-auvergne-rhone_alpes-bourse-mobilite-internationale-etudiants.yml
+++ b/data/benefits/javascript/region-auvergne-rhone_alpes-bourse-mobilite-internationale-etudiants.yml
@@ -1,4 +1,4 @@
-label: bourse Région Mobilité Internationale - Etudiant·e·s
+label: bourse Région Mobilité Internationale - Étudiants ou étudiantes
 institution: region_auvergne_rhone_alpes
 description: Cette aide a pour but de soutenir la mobilité internationale des
   étudiants ou étudiantes en études supérieures de la Région Auvergne-Rhône-Alpes.
