--- a/data/benefits/javascript/region-bretagne-bourse-international-bts-dut.yml
+++ b/data/benefits/javascript/region-bretagne-bourse-international-bts-dut.yml
@@ -1,4 +1,4 @@
-label: Bourse « Jeunes à l’international » – Etudiant·e·s en BTS et BUT
+label: Bourse « Jeunes à l’international » – Étudiants ou étudiantes en BTS et BUT
 institution: region_bretagne
 description:
   La Région Bretagne finance les étudiants ou étudiantes en BTS et BUT qui
