--- a/data/benefits/javascript/region-occitanie-financement-formations-sanitaires-sociales-niveaux-v-iv.yml
+++ b/data/benefits/javascript/region-occitanie-financement-formations-sanitaires-sociales-niveaux-v-iv.yml
@@ -2,7 +2,7 @@ label: financement des formations sanitaires et sociales de niveaux V et IV
 institution: region_occitanie
 description: La Région Occitanie finance gratuitement les formations sanitaires
   et sociales de niveaux V et IV pour les élèves inscrits ou inscrites en formation
-  d'aide-soignant·e, auxiliaire de puériculture, ambulancier·e,
+  d'aide-soignant ou aide-soignante, auxiliaire de puériculture, ambulancier ou ambulancière,
   accompagnant·e éducatif·ve et social·e, moniteur·rice éducateur·rice ou
   technicien·ne en intervention sociale et familiale.
 conditions:
