--- a/data/benefits/javascript/region-occitanie-pass-mutuelle-etudiant·e.yml
+++ b/data/benefits/javascript/region-occitanie-pass-mutuelle-etudiant·e.yml
@@ -1,4 +1,4 @@
-label: pass Mutuelle Etudiant·e
+label: pass Mutuelle Etudiant
 institution: region_occitanie
 description: La Région propose une aide spécifique pour favoriser l’accès aux
   soins des étudiants ou étudiantes n'étant pas déjà couvert·e·s par une mutuelle.
