--- a/data/benefits/javascript/region-occitanie-remuneration-stagiaires-formation-professionnelle.yml
+++ b/data/benefits/javascript/region-occitanie-remuneration-stagiaires-formation-professionnelle.yml
@@ -16,7 +16,7 @@ profils:
     conditions: []
 conditions:
   - Suivre une formation professionnelle agréée et financée par la Région.
-  - Ne pas être indemnisé·e par Pôle Emploi.
+  - Ne pas avoir reçu d'idemnisation de la part de Pôle Emploi.
 type: float
 unit: €
 periodicite: ponctuelle
