Supprime les points médians WIP

--- a/data/benefits/javascript/region-bourgogne-franche-comte-aide-au-permis-de-conduire.yml
+++ b/data/benefits/javascript/region-bourgogne-franche-comte-aide-au-permis-de-conduire.yml
@@ -4,10 +4,10 @@ description: Grâce à l'aide au permis de conduire de la région, bénéficiez 
   financement d'une partie de votre permis B.
 conditions:
   - Être inscrit ou inscrite dans une autoécole bourguignonne-franc-comtoise.
-  - Être rattaché au foyer fiscal parental (conditions de ressources
-    financières) ou émancipé·e fiscalement (sans conditions).
-  - Être engagé·e dans un parcours de formation (niveau IV ou inférieur) ou
-    demandeur d’emploi (sous conditions) ou en mission de Service civique ou
+  - Être inclus dans le foyer fiscal parental (conditions de ressources
+    financières) ou être fiscalement indépendant (sans conditions).
+  - Être en parcours de formation (niveau IV ou inférieur) ou en
+    statut de demande d’emploi (sous conditions) ou en mission de Service civique ou
     Contrat d'Engagement Jeune.
   - Être prêt à effectuer 15h de bénévolat dans une association de Bourgogne-Franche-Comté de votre choix.
 conditions_generales:
