Supprime les points médians WIP

--- a/data/benefits/javascript/region-corse-aide-au-permis-prima-strada.yml
+++ b/data/benefits/javascript/region-corse-aide-au-permis-prima-strada.yml
@@ -9,7 +9,7 @@ conditions:
   - Justifier d’un engagement citoyen et/ou bénévole dans une structure de son
     choix (justifier de 20 heures minimum).
   - Déposer une demande écrite motivée.
-  - Ne pas être concerné·e par l’attribution d’une aide de droit commun ou d’une
+  - Ne pas être éligible à l’obtention d’une aide de droit commun ou d’une
     autre aide existante.
   - Ne pas avoir débuté sa formation et ne pas avoir passé l’examen.
 conditions_generales:
