Supprime les points médians WIP

--- a/data/benefits/javascript/region-normandie-qualif-collectif.yml
+++ b/data/benefits/javascript/region-normandie-qualif-collectif.yml
@@ -7,9 +7,9 @@ conditions_generales:
     values:
       - "28"
 conditions:
-  - Contacter l’organisme de formation ou solliciter votre conseiller·e en
+  - Contacter l’organisme de formation ou solliciter votre conseiller ou conseillère en
     évolution professionnelle (Missions locales, Pôle emploi et Cap emploi).
-  - Être sorti·e de formation initiale (statut scolaire et apprentissage) depuis
+  - Avoir terminé une formation initiale (statut scolaire et apprentissage) depuis
     plus de 9 mois.
 profils:
   - type: chomeur
