--- a/data/benefits/javascript/region-normandie-une-formation-un-emploi.yml
+++ b/data/benefits/javascript/region-normandie-une-formation-un-emploi.yml
@@ -13,7 +13,7 @@ profils:
   - type: chomeur
     conditions: []
 conditions:
-  - Être sorti·e de formation initiale (statut scolaire et apprentissage) depuis
+  - Avoir terminé une formation initiale (statut scolaire et apprentissage) depuis
     plus de 9 mois.
   - Avoir trouvé une entreprise et remplir <a target="_blank" rel="noopener" title="formulaire - Nouvelle fenêtre"
     href="https://parcours-metier.normandie.fr/sites/default/files/2018-11/Formulaire%20Entreprise%20-%20UF%20UE-%202018-interactifv2.pdf">ce
