--- a/data/benefits/javascript/region-pays-de-la-loire-acces-emploi-parcours-tpme.yml
+++ b/data/benefits/javascript/region-pays-de-la-loire-acces-emploi-parcours-tpme.yml
@@ -11,7 +11,7 @@ profils:
   - type: chomeur
     conditions: []
 conditions:
-  - Prendre rendez-vous avec votre conseiller·e Pôle emploi.
+  - Prendre rendez-vous avec votre conseiller ou conseillère Pôle emploi.
 type: bool
 unit: €
 periodicite: autre
