Supprime les points médians WIP

--- a/data/benefits/javascript/region-normandie-vae.yml
+++ b/data/benefits/javascript/region-normandie-vae.yml
@@ -1,6 +1,7 @@
 label: accompagnement à la VAE (Validation des Acquis de l'Expérience)
 institution: region_normandie
-description: La Région soutient les candidat·e·s en assurant la prise en charge
+description:
+  La Région soutient les personnes candidates en assurant la prise en charge
   de l’accompagnement méthodologique à l’écriture du dossier et la préparation à
   l’entretien.
 conditions_generales:
