--- a/data/benefits/javascript/region-occitanie-financement-formations-sanitaires-sociales-niveaux-v-iv.yml
+++ b/data/benefits/javascript/region-occitanie-financement-formations-sanitaires-sociales-niveaux-v-iv.yml
@@ -3,8 +3,8 @@ institution: region_occitanie
 description: La Région Occitanie finance gratuitement les formations sanitaires
   et sociales de niveaux V et IV pour les élèves inscrits ou inscrites en formation
   d'aide-soignant ou aide-soignante, auxiliaire de puériculture, ambulancier ou ambulancière,
-  accompagnant·e éducatif·ve et social·e, moniteur·rice éducateur·rice ou
-  technicien·ne en intervention sociale et familiale.
+  accompagnante ou accompagnant éducatif et social, moniteur éducateur ou monitrice éducatrice,
+  technicien ou technicienne en intervention sociale et familiale.
 conditions:
   - Être inscrit ou inscrite dans un établissement de formation agréé par la Région
     Occitanie.
