--- a/data/benefits/openfisca/aspa.yml
+++ b/data/benefits/openfisca/aspa.yml
@@ -5,7 +5,7 @@ conditions:
   - Résider <abbr title="Métropole, Guadeloupe, Guyane, Martinique ou Réunion">en France</abbr> plus de <abbr title="180 jours, potentiellement discontinus">6 mois</abbr> cette année.
   - "L’ASPA n’est pas compatible avec l’AAH. Avant de faire votre demande, renseignez-vous auprès de votre MDPH : le basculement vers le régime de l’ASPA n’est plus obligatoire pour les personnes qui atteignent depuis 2017 les 62 ans."
   - Avoir demandé toutes les retraites (générale, réversion, complémentaire…) auxquelles vous avez droit.
-  - Votre conjoint·e doit avoir demandé toutes les retraites (générale, réversion, complémentaire…) auxquelles il ou elle a droit.
+  - Votre conjoint ou conjointe doit avoir demandé toutes les retraites (générale, réversion, complémentaire…) auxquelles il ou elle a droit.
 link: https://www.service-public.fr/particuliers/vosdroits/F16871
 form: https://www.lassuranceretraite.fr/portail-info/files/live/sites/pub/files/PDF/demande-aspa.pdf
 forms:
