--- a/data/benefits/openfisca/vendee_bourses_jeunes_benevoles_montant_max.yml
+++ b/data/benefits/openfisca/vendee_bourses_jeunes_benevoles_montant_max.yml
@@ -5,9 +5,9 @@ description: Le Département de la Vendée attribue des bourses d'études ou pou
   actions bénévoles.
 prefix: les
 conditions:
-  - Justifier pour les mineur·e·s d'un engagement d'au moins un an dans une ou
+  - Justifier pour les personnes mineures d'un engagement d'au moins un an dans une ou
     plusieurs associations domiciliées en Vendée.
-  - Apporter pour les majeurs la preuve d'une responsabilité dans le Bureau
+  - Apporter pour les personnes majeures la preuve d'une responsabilité dans le Bureau
     d'une association depuis au moins un an ou d'une implication régulière d'au
     moins deux ans.
 interestFlag: null
