--- a/data/benefits/javascript/region-occitanie-pass-mutuelle-etudiant·e.yml
+++ b/data/benefits/javascript/region-occitanie-pass-mutuelle-etudiant·e.yml
@@ -1,7 +1,7 @@
 label: pass Mutuelle Etudiant
 institution: region_occitanie
 description: La Région propose une aide spécifique pour favoriser l’accès aux
-  soins des étudiants ou étudiantes n'étant pas déjà couvert·e·s par une mutuelle.
+  soins des étudiants ou étudiantes ne bénéficiant pas d'une couverture par une mutuelle.
 prefix: le
 conditions_generales:
   - type: regions
