Supprime les points médians WIP

--- a/data/benefits/javascript/region-bretagne-bourse-international-lycee-pro.yml
+++ b/data/benefits/javascript/region-bretagne-bourse-international-lycee-pro.yml
@@ -1,7 +1,6 @@
-label: bourse « Jeunes à l’international » – lycéens ou lycéennes professionnel·le·s
+label: bourse « Jeunes à l’international » – jeunes en lycée professionnel
 institution: region_bretagne
-description:
-  La région Bretagne finance les lycéens ou lycéennes professionnel·le·s qui
+description: La région Bretagne finance les jeunes en lycée professionnel qui
   souhaitent effectuer un stage professionnel à l’étranger.
 conditions:
   - "Être inscrit ou inscrite en lycée en formation professionnelle de niveau 3 ou 4 :
