--- a/data/benefits/javascript/region-nouvelle-aquitaine-brevets-bafa-bafd-bnssa.yml
+++ b/data/benefits/javascript/region-nouvelle-aquitaine-brevets-bafa-bafd-bnssa.yml
@@ -1,7 +1,7 @@
 label: "aides aux brevets : BAFA, BAFD, BNSSA"
 institution: region_nouvelle_aquitaine
 description: La Région prend en charge une partie des Brevets d’Aptitude aux
-  Fonctions d’Animateur·ice et de Directeur·ice (BAFA et BAFD) et du Brevet
+  Fonctions d’Animateur ou d'animatrice et de Directeur ou directrice (BAFA et BAFD) et du Brevet
   national de Sécurité et de Sauveteur ou sauveteuse aquatique (BNSSA).
 prefix: l’
 conditions_generales:
