--- a/data/benefits/javascript/region-normandie-atouts-normandie-aide-bafa-bafd-bnssa-1er-secours-et-chantiers-de-bénévoles.yml
+++ b/data/benefits/javascript/region-normandie-atouts-normandie-aide-bafa-bafd-bnssa-1er-secours-et-chantiers-de-bénévoles.yml
@@ -2,7 +2,8 @@ label: Atouts Normandie - Aide au BAFA, BAFD, BNSSA 1er Secours et chantiers de
   bénévoles
 imgSrc: img/benefits/logo-atouts.jpg
 institution: region_normandie
-description: La Région Normandie soutient l'engagement des jeunes résidant en Normandie
+description:
+  La Région Normandie soutient l'engagement des jeunes résidant en Normandie
   âgés de 15 à 25 ans dans la réalisation d'une formation au titre du BAFA,
   BAFD, BNSSA, d'un 1er secours ou d'une participation à un chantier de
   bénévoles organisé en Normandie, en France ou à l’international.
