--- a/data/benefits/javascript/region_normandie-pass-monde-etudes-supérieures-1.yml
+++ b/data/benefits/javascript/region_normandie-pass-monde-etudes-supérieures-1.yml
@@ -1,7 +1,8 @@
 label: pass Monde Etudes supérieures
 imgSrc: img/benefits/logo-pass-monde.jpg
 institution: region_normandie
-description: La Région Normandie accompagne les jeunes résidant en Normandie âgés de 15
+description:
+  La Région Normandie accompagne les jeunes résidant en Normandie âgés de 15
   à 30 ans inscrits ou inscrites dans un cursus d’études supérieures en formation initiale
   ou continue de niveau III, II et I  et effectuant une mobilité internationale
   individuelle (stage en milieu professionnel, séjour d'études en établissement
