--- a/data/benefits/javascript/region_auvergne_rhone_alpes-financement-de-formations-dans-le-secteur-de-la-santé.yml
+++ b/data/benefits/javascript/region_auvergne_rhone_alpes-financement-de-formations-dans-le-secteur-de-la-santé.yml
@@ -1,6 +1,7 @@
 label: financement de formation dans le secteur de la santé
 institution: region_auvergne_rhone_alpes
-description: La Région finance les formations pour devenir aide-soignant ou aide-soignante,
+description:
+  La Région finance les formations pour devenir aide-soignant ou aide-soignante,
   auxiliaire de puériculture ou ambulancier ou ambulancière.
 conditions:
   - Constituer et déposer votre dossier auprès de l'intermédiaire designé par la
