--- a/data/benefits/javascript/region-pays-de-la-loire-visa-sanitaire-et-social.yml
+++ b/data/benefits/javascript/region-pays-de-la-loire-visa-sanitaire-et-social.yml
@@ -15,7 +15,7 @@ profils:
     conditions: []
 conditions:
   - Vous inscrire via Parcoursup si vous êtes étudiant ou étudiante, ou effectuer la
-    demande auprès de Pôle Emploi si vous êtes demandeur ou demandeuse d'emploi.
+    demande auprès de Pôle Emploi si vous êtes en recherche d'emploi.
 interestFlag: _interetAidesSanitaireSocial
 type: bool
 unit: €
