Fix syntaxte aide demande emploi

--- a/data/benefits/javascript/region-occitanie-financement-formations-sanitaires-sociales-niveaux-v-iv.yml
+++ b/data/benefits/javascript/region-occitanie-financement-formations-sanitaires-sociales-niveaux-v-iv.yml
@@ -8,7 +8,7 @@ description: La Région Occitanie finance gratuitement les formations sanitaires
 conditions:
   - Être inscrit ou inscrite dans un établissement de formation agréé par la Région
     Occitanie.
-  - Être en poursuite de scolarité ou inscrit ou inscrite comme demandeur ou demandeuse d’emploi
+  - Être en poursuite de scolarité ou en recherche d’emploi
     avant la date d’entrée en formation.
 conditions_generales:
   - type: regions
