"étudiants ou étudiantes" into "étudiants et étudiantes"

--- a/data/benefits/javascript/grand-est-mobilite-internationale-sanitaire-et-sociale.yml
+++ b/data/benefits/javascript/grand-est-mobilite-internationale-sanitaire-et-sociale.yml
@@ -1,9 +1,9 @@
 label:
-  aide à la mobilité internationale des étudiants ou étudiantes en formation sanitaire
+  aide à la mobilité internationale des étudiants et étudiantes en formation sanitaire
   et sociale
 institution: grand_est
 description: Cette aide vise à favoriser la mobilité internationale des élèves
-  et étudiants ou étudiantes en formation dans les instituts de formations sanitaire et
+  et étudiants et étudiantes en formation dans les instituts de formations sanitaire et
   sociale de la région Grand Est. Ce dispositif peut s’appliquer en complément
   d’une aide à la mobilité ERASMUS +.
 conditions:
