--- a/data/benefits/javascript/guadeloupe-bourse-sanitaire.yml
+++ b/data/benefits/javascript/guadeloupe-bourse-sanitaire.yml
@@ -1,7 +1,7 @@
 label: bourse sanitaire
 institution: guadeloupe
 description: La bourse sanitaire attribuée par la Région Guadeloupe contribue à
-  soutenir financièrement les stagiaires, élèves, étudiants ou étudiantes poursuivant des
+  soutenir financièrement les stagiaires, élèves, étudiants et étudiantes poursuivant des
   formations sanitaires dans les établissements de formation agréés par la
   collectivité régionale.
 conditions:
