--- a/data/benefits/javascript/hauts-de-france-bourse-mobilite-mermoz.yml
+++ b/data/benefits/javascript/hauts-de-france-bourse-mobilite-mermoz.yml
@@ -1,7 +1,7 @@
 label: bourse de mobilité internationale MERMOZ
 institution: hauts_de_france
 description: La Région Hauts-de-France a mis en place ce dispositif afin d'aider
-  les étudiants ou étudiantes à suivre à l'étranger un parcours de formation dans un
+  les étudiants et étudiantes à suivre à l'étranger un parcours de formation dans un
   établissement d'enseignement supérieur, un stage, ou un séjour de recherche
   dans un laboratoire.
 conditions:
