--- a/data/benefits/javascript/martinique-bourses-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/martinique-bourses-sanitaires-et-sociales.yml
@@ -1,7 +1,7 @@
 label: bourses sanitaires et sociales
 institution: martinique
 description: La Collectivité Territoriale de Martinique verse des bourses aux
-  étudiants ou étudiantes inscrits ou inscrites en formation sanitaire et sociale, école paramédicale
+  étudiants et étudiantes inscrits ou inscrites en formation sanitaire et sociale, école paramédicale
   ou de sage-femme dans les établissements agréés dispensant des formations
   sociales et sanitaires en Martinique.
 conditions:
