--- a/data/benefits/javascript/provence-alpes-cote-azur-bourse-sanitaire-social.yml
+++ b/data/benefits/javascript/provence-alpes-cote-azur-bourse-sanitaire-social.yml
@@ -1,7 +1,7 @@
 label: bourse régionale d’études dans les filières sanitaires et du travail social
 institution: region_provence_alpes_cote_azur
 description: Cette aide financière accordée sur critères sociaux s’adresse aux
-  étudiants ou étudiantes et élèves des filières sanitaires et du travail social dont les
+  étudiants et étudiantes et élèves des filières sanitaires et du travail social dont les
   revenus familiaux ou personnels sont reconnus insuffisants au regard de leurs
   charges.
 conditions_generales:
