--- a/data/benefits/javascript/region-auvergne-rhone_alpes-bourse-mobilite-internationale-etudiants.yml
+++ b/data/benefits/javascript/region-auvergne-rhone_alpes-bourse-mobilite-internationale-etudiants.yml
@@ -1,7 +1,7 @@
-label: bourse Région Mobilité Internationale - Étudiants ou étudiantes
+label: bourse Région Mobilité Internationale - étudiants et étudiantes
 institution: region_auvergne_rhone_alpes
 description: Cette aide a pour but de soutenir la mobilité internationale des
-  étudiants ou étudiantes en études supérieures de la Région Auvergne-Rhône-Alpes.
+  étudiants et étudiantes en études supérieures de la Région Auvergne-Rhône-Alpes.
 conditions:
   - Être inscrit ou inscrite dans un établissement d'enseignement supérieur
     d'Auvergne-Rhône-Alpes.
