--- a/data/benefits/javascript/region-bourgogne-franche-comte-etudes-etranger-aquisis.yml
+++ b/data/benefits/javascript/region-bourgogne-franche-comte-etudes-etranger-aquisis.yml
@@ -1,4 +1,4 @@
-label: Bourse Aquisis - Études à l'étranger pour étudiants ou étudiantes et apprentis ou apprenties post-bac
+label: Bourse Aquisis - Études à l'étranger pour étudiants et étudiantes et apprentis ou apprenties post-bac
 institution: region_bourgogne_franche_comte
 description: Cette bourse vous permet d’effectuer des périodes d’études dans le
   monde entier (sauf France métropolitaine et DROM-COM), afin d’acquérir des
