--- a/data/benefits/javascript/region-bretagne-bourse-international-bts-dut.yml
+++ b/data/benefits/javascript/region-bretagne-bourse-international-bts-dut.yml
@@ -1,7 +1,7 @@
-label: Bourse « Jeunes à l’international » – Étudiants ou étudiantes en BTS et BUT
+label: Bourse « Jeunes à l’international » – étudiants et étudiantes en BTS et BUT
 institution: region_bretagne
 description:
-  La Région Bretagne finance les étudiants ou étudiantes en BTS et BUT qui
+  La Région Bretagne finance les étudiants et étudiantes en BTS et BUT qui
   souhaitent effectuer un stage professionnel ou un séjour d’études à
   l’étranger.
 conditions:
