--- a/data/benefits/javascript/region-bretagne-bourse-international-formation-sanitaires-sociales.yml
+++ b/data/benefits/javascript/region-bretagne-bourse-international-formation-sanitaires-sociales.yml
@@ -1,9 +1,9 @@
 label:
-  Bourse « Jeunes à l’international » – étudiants ou étudiantes des formations
+  Bourse « Jeunes à l’international » – étudiants et étudiantes des formations
   sanitaires ou sociales
 institution: region_bretagne
 description:
-  La région Bretagne finance les étudiants ou étudiantes des formations
+  La région Bretagne finance les étudiants et étudiantes des formations
   sanitaires ou sociales qui souhaitent effectuer un stage professionnel ou un
   séjour d’études à l’étranger.
 conditions:
