--- a/data/benefits/javascript/region-ile-de-france-bourses-mobilite-etudiants-dut-licence-master.yml
+++ b/data/benefits/javascript/region-ile-de-france-bourses-mobilite-etudiants-dut-licence-master.yml
@@ -2,7 +2,7 @@ label: Bourses Mobilité pour les étudiants ou étudiants de BUT, licence, mast
 imgSrc: ""
 institution: region_ile_de_france
 description:
-  La Région Ile-de-France apporte aux étudiants ou étudiantes résidant en Île-de-France
+  La Région Ile-de-France apporte aux étudiants et étudiantes résidant en Île-de-France
   inscrits ou inscrites en BUT, licence ou master dans un établissement francilien
   partenaire une aide financière pour réaliser un stage ou une période d'études
   à l'étranger, d'une durée de 1 à 10 mois maximum, durant l'année
