--- a/data/benefits/javascript/region_bourgogne_franche_comte-bourses-détudes-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/region_bourgogne_franche_comte-bourses-détudes-sanitaires-et-sociales.yml
@@ -1,7 +1,7 @@
 label: bourses d'études sanitaires et sociales
 institution: region_bourgogne_franche_comte
 description: Une bourse d’études est accordée par la Région sur critères sociaux
-  aux étudiants ou étudiantes en travail social et aux élèves et étudiants ou étudiantes inscrits ou inscrites
+  aux étudiants et étudiantes en travail social et aux élèves et étudiants et étudiantes inscrits ou inscrites
   dans les instituts et écoles de formation de certaines professions de santé.
 conditions:
   - Être inscrit ou inscrite dans les instituts autorisés/agréés par la Région.
