--- a/data/benefits/javascript/region_bretagne-b-mouve-–-mobilité-des-formations-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/region_bretagne-b-mouve-–-mobilité-des-formations-sanitaires-et-sociales.yml
@@ -1,7 +1,7 @@
 label: b-Mouve – Mobilité des formations sanitaires et sociales
 institution: region_bretagne
 description:
-  La subvention B-Mouve vise à permettre aux élèves et étudiants ou étudiantes
+  La subvention B-Mouve vise à permettre aux élèves et étudiants et étudiantes
   des formations sanitaires et sociales de la Région Bretagne de réaliser des
   stages ou des séjours d'études en Europe. Le montant de l’aide dépend du
   profil des bénéficiaires.
