--- a/data/benefits/javascript/region_ile_de_france-bourses-pour-les-élèves-et-étudiant-e-s-inscrit-e-s-en-formations-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/region_ile_de_france-bourses-pour-les-élèves-et-étudiant-e-s-inscrit-e-s-en-formations-sanitaires-et-sociales.yml
@@ -1,9 +1,9 @@
 label:
-  bourses pour les élèves et étudiants ou étudiantes inscrits ou inscrites en formations
+  bourses pour les élèves et étudiants et étudiantes inscrits ou inscrites en formations
   sanitaires et sociales
 institution: region_ile_de_france
 description: La Région Ile-de-France verse, sous conditions de ressources, une
-  bourse aux élèves et étudiants ou étudiantes en formation paramédicale ou sociale.
+  bourse aux élèves et étudiants et étudiantes en formation paramédicale ou sociale.
 conditions:
   - Etre de nationalité française ou ressortissant ou ressortissante d'un pays de l'Union
     européenne ou étranger en situation régulière en France.
