--- a/data/benefits/javascript/region_la_reunion-bourse-régionale-sanitaire-et-sociale.yml
+++ b/data/benefits/javascript/region_la_reunion-bourse-régionale-sanitaire-et-sociale.yml
@@ -1,7 +1,7 @@
 label: bourse Régionale Sanitaire et Sociale
 institution: region_la_reunion
 description: La Région Réunion alloue une bourse régionale aux élèves et
-  étudiants ou étudiantes des filières sanitaires et sociales. La bourse est attribuée
+  étudiants et étudiantes des filières sanitaires et sociales. La bourse est attribuée
   selon la situation sociale de l’apprenant, sous réserve des critères
   d'éligibilité.
 conditions:
