--- a/data/benefits/javascript/region_normandie-aides-aux-formations-paramédicales-sociales-ou-de-santé.yml
+++ b/data/benefits/javascript/region_normandie-aides-aux-formations-paramédicales-sociales-ou-de-santé.yml
@@ -1,7 +1,7 @@
 label: aides aux formations paramédicales sociales ou de santé
 institution: region_normandie
 description:
-  La Région Normandie finance des aides pour les étudiants ou étudiantes et
+  La Région Normandie finance des aides pour les étudiants et étudiantes et
   élèves des formations sanitaires, sociales et de santé.
 conditions:
   - Être inscrit ou inscrite dans une des <a target="_blank" rel="noopener" title ="Formations éligibles - Nouvelle fenêtre"
