--- a/data/benefits/javascript/grand-est-aide-mobilite-internationale-etudiants.yml
+++ b/data/benefits/javascript/grand-est-aide-mobilite-internationale-etudiants.yml
@@ -1,8 +1,8 @@
-label: aide à la mobilité internationale des étudiants ou étudiantes
+label: aide à la mobilité internationale des étudiants et étudiantes
 institution: grand_est
 description:
-  L'aide à la mobilité internationale des étudiants ou étudiantes a pour but de
-  soutenir la mobilité internationale des étudiants ou étudiantes de la région Grand Est.
+  L'aide à la mobilité internationale des étudiants et étudiantes a pour but de
+  soutenir la mobilité internationale des étudiants et étudiantes de la région Grand Est.
 prefix: l’
 conditions_generales:
   - type: regions
