--- a/data/benefits/javascript/hauts-de-france-aide-restauration-etudiants-boursiers.yml
+++ b/data/benefits/javascript/hauts-de-france-aide-restauration-etudiants-boursiers.yml
@@ -1,9 +1,9 @@
 label: aide régionale à la restauration des étudiants boursiers
 institution: hauts_de_france
 description:
-  Cette aide permet d’offrir la gratuité des repas aux étudiants ou étudiantes
+  Cette aide permet d’offrir la gratuité des repas aux étudiants et étudiantes
   dans les restaurants universitaires pour équilibrer l’alimentation des
-  étudiants ou étudiantes, à raison d’un repas par service, au déjeuner et/ou au dîner,
+  étudiants et étudiantes, à raison d’un repas par service, au déjeuner et/ou au dîner,
   jusqu’à 100 repas sur l’année universitaire.
 conditions:
   - Être inscrit ou inscrite pour étudier dans un établissement d’enseignement supérieur,
