--- a/data/benefits/javascript/hauts-de-france-fonds-regional-aide-urgence-sanitaire-social.yml
+++ b/data/benefits/javascript/hauts-de-france-fonds-regional-aide-urgence-sanitaire-social.yml
@@ -1,9 +1,9 @@
 label:
-  fonds régional d'aide d'urgence pour les étudiants ou étudiantes du secteur
+  fonds régional d'aide d'urgence pour les étudiants et étudiantes du secteur
   sanitaire et social
 institution: hauts_de_france
 description: Cette aide vise à apporter rapidement une aide financière
-  ponctuelle et personnalisée aux étudiants ou étudiantes du secteur sanitaire et social en
+  ponctuelle et personnalisée aux étudiants et étudiantes du secteur sanitaire et social en
   difficulté financière. Elle est renouvelable une fois durant l'année scolaire.
 conditions:
   - Être inscrit ou inscrite dans un établissement de formation des travailleurs sociaux
