--- a/data/benefits/javascript/provence-alpes-cote-azur-fonds-sanitaire-social.yml
+++ b/data/benefits/javascript/provence-alpes-cote-azur-fonds-sanitaire-social.yml
@@ -1,9 +1,9 @@
 label:
-  fonds d’Aide Régional aux étudiants ou étudiantes du secteur sanitaire et du travail
+  fonds d’Aide Régional aux étudiants et étudiantes du secteur sanitaire et du travail
   social
 institution: region_provence_alpes_cote_azur
 description: Il s’agit d’une aide financière destinée à améliorer les conditions
-  de vie des élèves et étudiants ou étudiantes inscrits ou inscrites dans une filière sanitaire ou du
+  de vie des élèves et étudiants et étudiantes inscrits ou inscrites dans une filière sanitaire ou du
   travail social en Région Provence-Alpes-Côte d'Azur.
 conditions:
   - Être stagiaire de la formation professionnelle inscrit ou inscrite en formation
