--- a/data/benefits/javascript/region-la-reunion-etudier-au-quebec.yml
+++ b/data/benefits/javascript/region-la-reunion-etudier-au-quebec.yml
@@ -1,7 +1,7 @@
 label: étudier au Québec
 institution: region_la_reunion
 description:
-  La Région propose une aide financière aux étudiants ou étudiantes souhaitant
+  La Région propose une aide financière aux étudiants et étudiantes souhaitant
   partir étudier au Québec.
 prefix: l’aide
 conditions_generales:
