--- a/data/benefits/javascript/region-occitanie-bourse-de-stage-erasmus-formations-sanitaires-sociales.yml
+++ b/data/benefits/javascript/region-occitanie-bourse-de-stage-erasmus-formations-sanitaires-sociales.yml
@@ -1,7 +1,7 @@
 label: bourse de stage ERASMUS+ formations sanitaire et sociale
 institution: region_occitanie
 description:
-  La Région favorise la mobilité de stage des étudiants ou étudiantes de la
+  La Région favorise la mobilité de stage des étudiants et étudiantes de la
   filière Sanitaire et Sociale.
 prefix: la
 conditions_generales:
