--- a/data/benefits/javascript/region-normandie-programme-savoirs.yml
+++ b/data/benefits/javascript/region-normandie-programme-savoirs.yml
@@ -10,7 +10,7 @@ conditions:
   - Choisir un des modules dans la <a target="_blank" rel="noopener" title="liste - Nouvelle fenêtre"
     href="https://parcours-metier.normandie.fr/ftlv-dispositif-socle">liste</a>.
   - Faire la demande auprès de votre conseiller ou conseillère Pôle Emploi, Mission Locale,
-    Cap Emploi, PLIE ou de la personne référente en charge de votre suivi social pour être orienté ou orientée vers un
+    Cap Emploi, PLIE ou de la personne référente en charge de votre suivi social afin de vous aider à trouver un
     organisme de formation prestataire.
 profils:
   - type: chomeur
