--- a/data/benefits/javascript/grand-est-parcours-acquisition-des-competences-en-entreprises.yml
+++ b/data/benefits/javascript/grand-est-parcours-acquisition-des-competences-en-entreprises.yml
@@ -2,7 +2,7 @@ label: parcours d’acquisition des compétences en entreprises (PACE)
 institution: grand_est
 description:
   Ce dispositif permet aux jeunes de 18 à 29 ans, titulaires d'un diplôme ou non,
-  d’acquérir des compétences et une première expériences professionnelle tutorée
+  d’acquérir des compétences et une première expérience professionnelle tutorée
   d’une durée de six mois, au sein d’une entreprise.
 conditions_generales:
   - type: age
