Fix erreur label aide

--- a/data/benefits/javascript/region-ile-de-france-bourses-mobilite-etudiants-dut-licence-master.yml
+++ b/data/benefits/javascript/region-ile-de-france-bourses-mobilite-etudiants-dut-licence-master.yml
@@ -1,4 +1,4 @@
-label: Bourses Mobilité pour les étudiants ou étudiants de BUT, licence, master
+label: Bourses Mobilité pour les étudiants et étudiantes de BUT, licence, master
 imgSrc: ""
 institution: region_ile_de_france
 description:
