--- a/data/benefits/javascript/region_normandie-dotation-jeunes-agriculteurs-aide-au-demarrage-dentreprise.yml
+++ b/data/benefits/javascript/region_normandie-dotation-jeunes-agriculteurs-aide-au-demarrage-dentreprise.yml
@@ -40,4 +40,7 @@ unit: €
 periodicite: autre
 montant: 30000
 link: https://www.normandie.fr/dotation-jeunes-agriculteurs-aide-au-demarrage-dentreprises-cofinance-par-le-feader#:~:text=le%20territoire%20fran%C3%A7ais.-,Caract%C3%A9ristiques%20de%20l'aide,une%20installation%20en%20zone%20d%C3%A9favoris%C3%A9e
-teleservice: https://www.demarches-simplifiees.fr/commencer/test/2282d4a7-30b3-4852-bc2f-2d52aa23f753
+teleservice:
+  name: redirection
+  query:
+    vers: ds?benefit=2282d4a7-30b3-4852-bc2f-2d52aa23f753
