Fix tests unitaire - syntaxe condition aide

--- a/data/benefits/javascript/region-corse-faj.yml
+++ b/data/benefits/javascript/region-corse-faj.yml
@@ -4,7 +4,7 @@ description: La Région soutient les jeunes dans leur démarche d’insertion gr
   à une aide financière.
 conditions:
   - Avoir des ressources ne dépassant pas 551,31 € nets.
-  - Effectuer votre demande auprès de la personne référente en charge de votre suivi social
+  - Effectuer votre demande auprès de la personne référente en charge de votre suivi social.
 conditions_generales:
   - type: regions
     values:
