feat: Utiliser la clef définitive
cf: https://mattermost.incubateur.net/betagouv/pl/cgoppj6jrty1dg7iiuykcpttge

--- a/data/benefits/javascript/region_normandie-dotation-jeunes-agriculteurs-aide-au-demarrage-dentreprise.yml
+++ b/data/benefits/javascript/region_normandie-dotation-jeunes-agriculteurs-aide-au-demarrage-dentreprise.yml
@@ -43,5 +43,5 @@ link: https://www.normandie.fr/dotation-jeunes-agriculteurs-aide-au-demarrage-de
 teleservice:
   name: redirection
   query:
-    vers: ds?benefit=2282d4a7-30b3-4852-bc2f-2d52aa23f753
+    vers: ds?benefit=r28_dja
 skip_schema_check: true
