chore: corrige le lint

--- a/data/benefits/javascript/provence-alpes-cote-azur-fonds-sanitaire-social.yml
+++ b/data/benefits/javascript/provence-alpes-cote-azur-fonds-sanitaire-social.yml
@@ -1,7 +1,8 @@
 label: Aide individuelle régionale d'études des secteurs du sanitaire et du
   travail social
 institution: region_provence_alpes_cote_azur
-description: L'aide est attribuée, sur critères sociaux, à toute personne élève ou étudiante confrontée à des difficultés matérielles ne lui permettant pas
+description:
+  L'aide est attribuée, sur critères sociaux, à toute personne élève ou étudiante confrontée à des difficultés matérielles ne lui permettant pas
   d'entreprendre ou de poursuivre une formation. Versée mensuellement, elle est
   attribuée pour la durée de la formation dans la limite d’une année scolaire,
   et renouvelable chaque année sur demande.
