--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint:fix": "eslint backend data iframes lib src --ext ts,js,vue --fix",
     "openfisca": "OPENFISCA_WORKERS=1 gunicorn openfisca.api --config openfisca/config.py",
     "predb": "mkdir -p db",
-    "prestart": "npm run build",
+    "prestart": "npm run build && npm run stats",
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "start": "cd dist-server && NODE_ENV=production node ./backend/server.js",
