Fix condition profils

--- a/data/benefits/javascript/region_nouvelle_aquitaine-chèque-livre.yml
+++ b/data/benefits/javascript/region_nouvelle_aquitaine-chèque-livre.yml
@@ -13,7 +13,7 @@ profils:
   - type: lyceen
     conditions: []
   - type: apprenti
-  - conditions: []
+    conditions: []
 link: https://www.mesdemarches.aidesrentree.fr/Beneficiaires/Views/Accueil.aspx
 teleservice: https://www.mesdemarches.aidesrentree.fr/Beneficiaires/views/Inscription/Identite.aspx
 form: ""
